# MVCNN_Reconstruction

./: .gitignore  Evaluation.ipynb  README.md  Setup.txt  Visualization.ipynb  config.py  project.ipynb  pyproject.toml  start_jupyter.sh
datasets/: ShapeNet.json
mvcnn_rec/data/: shapenet.py
mvcnn_rec/inference/: infer_mvcnn.py  infer_mvcnn_rec.py  visualization_mvcnn_rec.py
mvcnn_rec/model/: mvcnn.py  mvcnn_rec.py
mvcnn_rec/training/: train_mvcnn.py  train_mvcnn_rec.py  validation.py
mvcnn_rec/util/: data_loader.py  export.py  marching_cubes.py  visualization.py
